ScottishSummit_27022021/01-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: scotthishsummit
---
apiVersion: v1
kind: Pod
metadata:
  name: scotthishsummit
  namespace: scotthishsummit
  labels:
    app: nginx
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
