ScottishSummit_27022021/02-nginxIngress.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: scotthishsummitingress
---
apiVersion: v1
kind: Pod
metadata:
  name: scotthishsummitingress
  namespace: scotthishsummitingress
  labels:
    app: scotthishsummitingress
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: scotthishsummitingress
  namespace: scotthishsummitingress
spec:
  selector:
    app: scotthishsummitingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scotthishsummitingress
  namespace: scotthishsummitingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: scotthishsummitingress
          servicePort: 80
